--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
 
-div{
+/* div{
     border: solid 1px black;
-}
+} */
 
 html, body {
   height: 100%;
@@ -85,7 +85,7 @@ a.navbar-brand:hover{
     background-position: right;
     background-repeat: no-repeat;
     background-size: contain; 
-    height: 35vh;
+    height: 30vh;
     max-width: 100%;
     margin-top: 0vh;
 }
@@ -95,7 +95,7 @@ a.navbar-brand:hover{
     background-position: right;
     background-repeat: no-repeat;
     background-size: contain; 
-    height: 35vh;
+    height: 30vh;
     max-width: 100%;
     margin-top: 0vh;
 }
@@ -163,6 +163,227 @@ a.navbar-brand:hover{
 
 /*-------------------------------------------------------------------PROGRESS SKILLS*/
 
+/* 
+// Responsive My Skills Box Widget
+// Made with ❤ by @Pawan_Mall
+// http://www.pawanmall.net 
+*/
+
+/* body { background: #E9E5E2;margin:2%; } */
+
+ #SkillBox {
+    font-size: 10px;
+    font-family: 'Montserrat', cursive;
+    width: 95%;
+    height: auto;
+    margin: 40px auto;
+    background-color: #fff;
+    /* //border: 1px solid #cdcdcd; */
+    padding: 10px;
+    border-radius:20px;
+    -o-border-radius:20px;
+    -webkit-border-radius:20px;
+    -ms-border-radius:20px;
+    -moz-border-radius:20px;  
+} 
+
+.SkillBar {
+    width: 90%;
+    height: 30px;
+    position: relative;
+    background: #EAEAE8;
+    margin: 10px auto;
+    border-radius:10px;
+}
+#Skill-HTML {
+    width: 100%;
+    animation: Animate-HTML 4s;
+    -webkit-animation: Animate-HTML 4s;
+    -moz-animation: Animate-HTML 4s;
+    -o-animation: Animate-HTML 4s;
+    height: 30px;
+    position: absolute;
+    background-color: #D1D0CF;
+    border-radius:10px;
+}
+@keyframes Animate-HTML {
+    from {
+    width: 10px;
+}
+to {
+    width: 100%}
+}@-webkit-keyframes Animate-HTML {
+    from {
+    width: 10px;
+}
+to {
+    width: 100%}
+}@-moz-keyframes Animate-HTML {
+    from {
+    width: 10px;
+}
+to {
+    width: 100%}
+}@-o-keyframes Animate-HTML {
+    from {
+    width: 10px;
+}
+to {
+    width: 100%}
+}#Skill-CSS {
+    animation: Animate-CSS 5s;
+    -webkit-animation: Animate-CSS 5s;
+    -moz-animation: Animate-CSS 5s;
+    -o-animation: Animate-CSS 5s;
+    width: 70%;
+    height: 30px;
+    position: absolute;
+    background-color: #AFADAC;
+    border-radius:10px;
+}
+@keyframes Animate-CSS {
+    from {
+    width: 10px;
+}
+to {
+    width: 70%}
+}@-webkit-keyframes Animate-CSS {
+    from {
+    width: 10px;
+}
+to {
+    width: 70%}
+}@-moz-keyframes Animate-CSS {
+    from {
+    width: 10px;
+}
+to {
+    width: 70%}
+}@-o-keyframes Animate-CSS {
+    from {
+    width: 10px;
+}
+to {
+    width: 70%}
+}
+
+}@-o-keyframes Animate-jQuery {
+    from {
+    width: 10px;
+}
+}#Skill-JS {
+    animation: Animate-JS 4s;
+    -webkit-animation: Animate-JS 4s;
+    -moz-animation: Animate-JS 4s;
+    -o-animation: Animate-JS 4s;
+    width: 65%;
+    height: 30px;
+    position: absolute;
+    background-color: #858382;
+    border-radius:10px;
+}
+@keyframes Animate-JS {
+    from {
+    width: 10px;
+}
+to {
+    width: 65%}
+}@-webkit-keyframes Animate-JS {
+    from {
+    width: 10px;
+}
+to {
+    width: 65%}
+}@-moz-keyframes Animate-JS {
+    from {
+    width: 10px;
+}
+to {
+    width: 65%}
+}@-o-keyframes Animate-JS {
+    from {
+    width: 10px;
+}
+to {
+    width: 65%}
+}
+
+to {
+    width: 25%}
+}
+to {
+    width: 25%}
+}
+to {
+    width: 50%}
+}@-webkit-keyframes Animate-PHP {
+    from {
+    width: 10px;
+}
+
+}#Skill-Python {
+    animation: Animate-Python 4s;
+    -webkit-animation: Animate-Python 4s;
+    -moz-animation: Animate-Python 4s;
+    -o-animation: Animate-Python 4s;
+    width: 80%;
+    height: 30px;
+    position: absolute;
+    background-color: #6D6D6A;
+    border-radius:10px;
+}
+@keyframes Animate-Python {
+    from {
+    width: 10px;
+}
+to {
+    width: 80%}
+}@-webkit-keyframes Animate-Python {
+    from {
+    width: 10px;
+}
+to {
+    width: 80%}
+}@-moz-keyframes Animate-Python {
+    from {
+    width: 10px;
+}
+to {
+    width: 80%}
+}@-o-keyframes Animate-Python {
+    from {
+    width: 10px;
+}
+to {
+    width: 80%}
+
+to {
+    width: 35%}
+}.Skill-Area {
+    z-index: 1;
+    float: left;
+    /* //position: absolute; */
+    margin-top: 10px;
+    margin-left: 10px;
+    text-shadow: none;
+    color: #fff;
+    /* //font-family: Lato-Regular, sans-serif; */
+    font-size: 12px;
+}
+.PercentText {
+    z-index: 3;
+    position: relative;
+    padding-right: 10px;
+    margin-top: 10px;
+    float: right;
+    text-shadow: none;
+    color: #fff;
+    /* //font-family: Lato-Regular, sans-serif; */
+    font-size: 12px;
+}
+
+
+/* 
 .progress-skills{
     margin-bottom: 48px;
     margin-top: 5rem;
@@ -183,7 +404,7 @@ a.navbar-brand:hover{
 .progress-type{
     color: #fff;
     text-align: right;
-}
+} */
 
 /*-------------------------------------------------------------------TYPEWRITER*/
 .content{
