--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ a{
 
 a a:hover{
     color:#303030;
-    text-decoration-line: none;
+    /* text-decoration-line: none; */
 }
 
 /*------------------------------------------------------------------HEADER*/
@@ -62,7 +62,9 @@ a.navbar-brand:hover{
 }
 
 .navbar-nav a:hover{
-    border-bottom: 1px solid #fff;
+    /* border-bottom: 1px solid #fff; */
+    font-weight: 3px;
+    color: #fff;
 }
 .navbar-toggler-icon{
     margin-left: auto;
@@ -175,6 +177,18 @@ a.navbar-brand:hover{
 .cards-content{
     margin-bottom: 3rem;
 }
+
+.portfolio{
+    color: black;
+    font-weight: 4px;
+}
+
+/*-------------------------------------------------------------------MODELS*/
+
+.model-footer #staticBackdrop-close{
+    text-decoration: none;
+    background-color: red;
+} 
 /*-------------------------------------------------------------------CARDS LANDING PAGE*/
 
 .landing-content h4{
@@ -426,10 +440,12 @@ iframe{
   .navbar-brand { display: none; }
   .copy-right{ display: none; }
   .navbar-toggler-icon{margin-left: auto;}
-  .list-inline li i {display: none;}
+  /* .list-inline li i {display: none;} */
   .nav-item{text-align: right;}
   .navbar-nav{margin-right: 0;}
   .contact-map {display: none;}
+  .navbar-nav a:hover{border-bottom: none; font-weight: 3px;
+}
 }
 
 @media screen and (min-width:0px) and (max-width: 320px){
